<resources>
    <string name="app_name">PayrollApplication</string>
    <string name="emplblFname">First Name:</string>
    <string name="emplblLastname">Last Name:</string>
    <string name="emplblAddress">Address:</string>
    <string name="emplblPhone">Phone:</string>
    <string name="emplblEmail">Email:</string>
    <string name="emptxtFname" />
    <string name="emptxtLname" />
    <string name="emptxtAddress" />
    <string name="emptxtPhone" />
    <string name="emptxtEmail" />
    <string name="emplblTitle">Employee Information</string>
    <string name="deptbtnSave">Save</string>
    <string name="deptbtnEdit">Edit</string>
    <string name="deptbtnSearch">View Details</string>
    <string name="depttxtEmpId" />
    <string name="depttxtFname" />
    <string name="depttxtLname" />
    <string name="depttxtAddress" />
    <string name="depttxtPhone" />
    <string name="depttxtEmail" />
    <string name="Manager">Manager</string>
    <string name="Employee" >Employee</string>
    <string name="start_shift">Start of Shift</string>
    <string name="end_shift">End of Shift</string>
</resources>
